# genetic_algorithm-GPU

./: CMakeLists.txt  FindGLUT.cmake  FindLAPACKE.cmake  FindSTIM.cmake  README.md
src/: basic_functions.h  enviload.h  ga_gpu.cu  ga_gpu.h  main.cu  timer.h
